# Charradissa

./: .gitignore  Cargo.toml  Dockerfile  README.md  charradissa.toml.example
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
charradissa-core/: Cargo.toml
charradissa-core/src/: approval.rs  backend.rs  blocks.rs  concierge.rs  config.rs  dm_registry.rs  error.rs  farga.rs  graph_context.rs  lib.rs  mermaid.rs  registration.rs  responder.rs  routing.rs  task.rs  tool_loop.rs  transport.rs  types.rs
charradissa-core/src/agents/: mod.rs  org.rs  project.rs  specialist.rs
charradissa-core/src/farcaster/: agent.rs  analyzer.rs  claude_analyzer.rs  concurrence.rs  cross_domain.rs  domain_concierge.rs  governance.rs  milestone.rs  mod.rs  observation.rs  system_agent.rs  upstream.rs
charradissa-core/tests/: approval_tests.rs  concierge_tests.rs  config_tests.rs  farcaster_tests.rs  hs_token_tests.rs  listen_port_tests.rs  persistent_approval_queue_tests.rs  provisioning_config_tests.rs  registration_tests.rs  tool_loop_tests.rs  trait_tests.rs  transport_tests.rs  types_tests.rs
charradissa-daemon/: Cargo.toml
charradissa-daemon/src/: approval_relay.rs  ctl.rs  main.rs  mcp_api.rs  queue_api.rs  registry.rs
charradissa-jira/: Cargo.toml
charradissa-jira/src/: backend.rs
charradissa-matrix/: Cargo.toml
charradissa-matrix/src/: appservice.rs  backend.rs  client.rs  lib.rs  mcp.rs
docs/superpowers/: 2026-06-20-overnight-session-handoff.md
docs/superpowers/plans/: 2026-06-12-charradissa-implementation.md  2026-06-18-farcaster.md  2026-06-18-governance-pipeline.md  2026-06-18-governance-plan-1-foundational-types.md  2026-06-18-governance-plan-2-farga-api.md  2026-06-18-governance-plan-3-amassada-canvas.md  2026-06-18-governance-plan-4-integration-wiring.md  2026-06-19-guilhem-conversational-path.md  2026-06-27-project-driven-provisioning.md
docs/superpowers/specs/: 2026-06-12-charradissa-design.md  2026-06-18-farcaster-design.md  2026-06-18-governance-session-composition-design.md  2026-06-27-project-driven-room-provisioning-design.md
