[workspace]
members = [
    "charradissa-core",
    "charradissa-matrix",
    "charradissa-jira",
    "charradissa-daemon",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-stream = "0.1"
corrier-core = { path = "../Corrier/corrier-core" }
nervi-core = { path = "../nervi/nervi-core" }
