[package]
name = "charradissa-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
amassada-core = { path = "../../Amassada/crates/amassada-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
toml.workspace = true
