[package]
name = "charradissa-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "charradissa-daemon"
path = "src/main.rs"

[[bin]]
name = "charradissa-ctl"
path = "src/ctl.rs"

[dependencies]
charradissa-core = { path = "../charradissa-core" }
charradissa-matrix = { path = "../charradissa-matrix" }
charradissa-jira = { path = "../charradissa-jira" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
